--- a/ssg01/src/pages/index.astro
+++ b/ssg01/src/pages/index.astro
@@ -33,14 +33,7 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span>成功！</h1>
-<nav>
-	<ul>
-		<li><a href="./works">作品</a></li>
-		<li><a href="./about">このサイトについて</a></li>
-	</ul>
-</nav>
-
+		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
