--- a/ssg01/src/pages/works/index.astro
+++ b/ssg01/src/pages/works/index.astro
@@ -1,3 +1,13 @@
+---
+import Layout from '../../layouts/Layout.astro';
+import Card from '../components/Card.astro';
+---
+
+<Layout title="トップページ" description="このWebサイトは、Webデザイナーになるためのポートフォリオサイトです">
+
+
+</Layout>
+
 <!DOCTYPE html>
 <html lang="ja">
   <head>
