--- a/ssg01/src/pages/works/index.astro
+++ b/ssg01/src/pages/works/index.astro
@@ -1,26 +1,11 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import { getCollection } from 'astro:content';
+const workPages = await getCollection('works');
+console.log(workPages);
 ---
-
-<Layout title="トップページ" description="このWebサイトは、Webデザイナーになるためのポートフォリオサイトです">
-
-
+<Layout title="作品一覧" description="作品一覧ページです。">
+  <ul>
+    {workPages.map(productPage => (<li class="product"><a href={`/works/${productPage.slug}`}>{productPage.data.title}</a></li> ))}
+  </ul>
 </Layout>
-
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Works</title>
-  </head>
-  <body>
-    <h1>作品一覧</h1>
-    <ul>
-      <li><a href="/works/work01">作品A</a></li>
-      <li><a href="/works/work02">作品B</a></li>
-      <li><a href="/works/work03">作品C</a></li>
-    </ul>
-  </body>
-</html>
