--- a/ssg01/src/pages/works/index.astro
+++ b/ssg01/src/pages/works/index.astro
@@ -1,11 +1,12 @@
 ---
 import Layout from '../../layouts/Layout.astro';
+import Card from '../../components/Card.astro';
 import { getCollection } from 'astro:content';
 const workPages = await getCollection('works');
-console.log(workPages);
 ---
 <Layout title="作品一覧" description="作品一覧ページです。">
-  <ul>
-    {workPages.map(productPage => (<li class="product"><a href={`/works/${productPage.slug}`}>{productPage.data.title}</a></li> ))}
-  </ul>
+  <main>
+    {workPages.map(productPage => (<Card title={productPage.data.title} href=`/works/${productPage.slug}` thumbnail={productPage.data.thumbnail} body={productPage.data.description} />
+    ))}
+    </main>
 </Layout>
